added script to scrape from shit

--- a/notebooks/exploration.ipynb
+++ b/notebooks/exploration.ipynb
@@ -11,11 +11,27 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "d:\\Kerjaan\\Kuliah\\Tugas Akhir\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cd .."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "%cd ..\n",
-    "\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import requests"
    ]
   },
   {
@@ -36,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,9 +64,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "145063\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -168,49 +191,113 @@
        "      <td>4.0</td>\n",
        "      <td>17.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4minute_zh.wikipedia.org_all-access_spider</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>17.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>11.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>52_Hz_I_Love_You_zh.wikipedia.org_all-access_s...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>48.0</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>3 rows × 551 columns</p>\n",
+       "<p>5 rows × 551 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                      Page  2015-07-01  2015-07-02  \\\n",
-       "0  2NE1_zh.wikipedia.org_all-access_spider        18.0        11.0   \n",
-       "1   2PM_zh.wikipedia.org_all-access_spider        11.0        14.0   \n",
-       "2    3C_zh.wikipedia.org_all-access_spider         1.0         0.0   \n",
+       "                                                Page  2015-07-01  2015-07-02  \\\n",
+       "0            2NE1_zh.wikipedia.org_all-access_spider        18.0        11.0   \n",
+       "1             2PM_zh.wikipedia.org_all-access_spider        11.0        14.0   \n",
+       "2              3C_zh.wikipedia.org_all-access_spider         1.0         0.0   \n",
+       "3         4minute_zh.wikipedia.org_all-access_spider        35.0        13.0   \n",
+       "4  52_Hz_I_Love_You_zh.wikipedia.org_all-access_s...         NaN         NaN   \n",
        "\n",
        "   2015-07-03  2015-07-04  2015-07-05  2015-07-06  2015-07-07  2015-07-08  \\\n",
        "0         5.0        13.0        14.0         9.0         9.0        22.0   \n",
        "1        15.0        18.0        11.0        13.0        22.0        11.0   \n",
        "2         1.0         1.0         0.0         4.0         0.0         3.0   \n",
+       "3        10.0        94.0         4.0        26.0        14.0         9.0   \n",
+       "4         NaN         NaN         NaN         NaN         NaN         NaN   \n",
        "\n",
        "   2015-07-09  ...  2016-12-22  2016-12-23  2016-12-24  2016-12-25  \\\n",
        "0        26.0  ...        32.0        63.0        15.0        26.0   \n",
        "1        10.0  ...        17.0        42.0        28.0        15.0   \n",
        "2         4.0  ...         3.0         1.0         1.0         7.0   \n",
+       "3        11.0  ...        32.0        10.0        26.0        27.0   \n",
+       "4         NaN  ...        48.0         9.0        25.0        13.0   \n",
        "\n",
        "   2016-12-26  2016-12-27  2016-12-28  2016-12-29  2016-12-30  2016-12-31  \n",
        "0        14.0        20.0        22.0        19.0        18.0        20.0  \n",
        "1         9.0        30.0        52.0        45.0        26.0        20.0  \n",
        "2         4.0         4.0         6.0         3.0         4.0        17.0  \n",
+       "3        16.0        11.0        17.0        19.0        10.0        11.0  \n",
+       "4         3.0        11.0        27.0        13.0        36.0        10.0  \n",
        "\n",
-       "[3 rows x 551 columns]"
+       "[5 rows x 551 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_1.head(3)"
+    "print(len(train_1))\n",
+    "train_1.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "145063\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -357,18 +444,19 @@
        "[3 rows x 804 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print(len(train_2))\n",
     "train_2.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +530,7 @@
        "4  !vote_en.wikipedia.org_all-access_all-agents_2...  fa012434263a"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,16 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all([True if x in key_2['Id'].tolist() else False for x in key_1['Id'].tolist()])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +616,7 @@
        "4  007_スペクター_ja.wikipedia.org_all-access_all-agen...  c0effb42cdd5"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,6 +624,287 @@
    "source": [
     "print(key_2.shape)\n",
     "key_2.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Data Scraping"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_wiki_parameters(parameter_str):\n",
+    "    parameter_list = parameter_str.split('_')\n",
+    "    agent = parameter_list[-1]\n",
+    "    access = parameter_list[-2]\n",
+    "    project = parameter_list[-3]\n",
+    "    name = '_'.join(parameter_list[:-3])\n",
+    "\n",
+    "    return {\n",
+    "        'path': parameter_str,\n",
+    "        'name':name,\n",
+    "        'project': project,\n",
+    "        'access': access,\n",
+    "        'agent': agent\n",
+    "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>2NE1_zh.wikipedia.org_all-access_spider</th>\n",
+       "      <th>2PM_zh.wikipedia.org_all-access_spider</th>\n",
+       "      <th>3C_zh.wikipedia.org_all-access_spider</th>\n",
+       "      <th>4minute_zh.wikipedia.org_all-access_spider</th>\n",
+       "      <th>52_Hz_I_Love_You_zh.wikipedia.org_all-access_spider</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2015-07-01</th>\n",
+       "      <td>18.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-07-02</th>\n",
+       "      <td>11.0</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-07-03</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-07-04</th>\n",
+       "      <td>13.0</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2015-07-05</th>\n",
+       "      <td>14.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-09-06</th>\n",
+       "      <td>27.0</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>23.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-09-07</th>\n",
+       "      <td>29.0</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>19.0</td>\n",
+       "      <td>28.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-09-08</th>\n",
+       "      <td>23.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-09-09</th>\n",
+       "      <td>54.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>38.0</td>\n",
+       "      <td>8.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2017-09-10</th>\n",
+       "      <td>38.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>7.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>803 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            2NE1_zh.wikipedia.org_all-access_spider  \\\n",
+       "2015-07-01                                     18.0   \n",
+       "2015-07-02                                     11.0   \n",
+       "2015-07-03                                      5.0   \n",
+       "2015-07-04                                     13.0   \n",
+       "2015-07-05                                     14.0   \n",
+       "...                                             ...   \n",
+       "2017-09-06                                     27.0   \n",
+       "2017-09-07                                     29.0   \n",
+       "2017-09-08                                     23.0   \n",
+       "2017-09-09                                     54.0   \n",
+       "2017-09-10                                     38.0   \n",
+       "\n",
+       "            2PM_zh.wikipedia.org_all-access_spider  \\\n",
+       "2015-07-01                                    11.0   \n",
+       "2015-07-02                                    14.0   \n",
+       "2015-07-03                                    15.0   \n",
+       "2015-07-04                                    18.0   \n",
+       "2015-07-05                                    11.0   \n",
+       "...                                            ...   \n",
+       "2017-09-06                                    25.0   \n",
+       "2017-09-07                                    26.0   \n",
+       "2017-09-08                                    23.0   \n",
+       "2017-09-09                                    13.0   \n",
+       "2017-09-10                                    81.0   \n",
+       "\n",
+       "            3C_zh.wikipedia.org_all-access_spider  \\\n",
+       "2015-07-01                                    1.0   \n",
+       "2015-07-02                                    0.0   \n",
+       "2015-07-03                                    1.0   \n",
+       "2015-07-04                                    1.0   \n",
+       "2015-07-05                                    0.0   \n",
+       "...                                           ...   \n",
+       "2017-09-06                                    7.0   \n",
+       "2017-09-07                                    3.0   \n",
+       "2017-09-08                                    4.0   \n",
+       "2017-09-09                                    7.0   \n",
+       "2017-09-10                                    6.0   \n",
+       "\n",
+       "            4minute_zh.wikipedia.org_all-access_spider  \\\n",
+       "2015-07-01                                        35.0   \n",
+       "2015-07-02                                        13.0   \n",
+       "2015-07-03                                        10.0   \n",
+       "2015-07-04                                        94.0   \n",
+       "2015-07-05                                         4.0   \n",
+       "...                                                ...   \n",
+       "2017-09-06                                        16.0   \n",
+       "2017-09-07                                        19.0   \n",
+       "2017-09-08                                        30.0   \n",
+       "2017-09-09                                        38.0   \n",
+       "2017-09-10                                         4.0   \n",
+       "\n",
+       "            52_Hz_I_Love_You_zh.wikipedia.org_all-access_spider  \n",
+       "2015-07-01                                                NaN    \n",
+       "2015-07-02                                                NaN    \n",
+       "2015-07-03                                                NaN    \n",
+       "2015-07-04                                                NaN    \n",
+       "2015-07-05                                                NaN    \n",
+       "...                                                       ...    \n",
+       "2017-09-06                                               23.0    \n",
+       "2017-09-07                                               28.0    \n",
+       "2017-09-08                                               14.0    \n",
+       "2017-09-09                                                8.0    \n",
+       "2017-09-10                                                7.0    \n",
+       "\n",
+       "[803 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame.from_dict(train_2.iloc[:5].set_index('Page').to_dict(orient='index'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wiki_parameters = [get_wiki_parameters(parameter_str) for parameter_str in train_2['Page'].tolist()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'items': [{'project': 'zh.wikipedia', 'article': '2NE1', 'granularity': 'daily', 'timestamp': '2015070100', 'access': 'all-access', 'agent': 'spider', 'views': 18}, {'project': 'zh.wikipedia', 'article': '2NE1', 'granularity': 'daily', 'timestamp': '2015070200', 'access': 'all-access', 'agent': 'spider', 'views': 11}]}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for parameter in wiki_parameters:\n",
+    "    project = parameter['project']\n",
+    "    access = parameter['access']\n",
+    "    agent = parameter['agent']\n",
+    "    article = parameter['name']\n",
+    "    granularity = \"daily\"\n",
+    "    start = '20170910'\n",
+    "    end = '20171231'\n",
+    "    response = requests.get(\n",
+    "        f'https://wikimedia.org/api/rest_v1/metrics/pageviews/per-article/{project}/{access}/{agent}/{article}/{granularity}/{start}/{end}', \n",
+    "        headers={'User-Agent': 'belmiro533backup@gmail.com'}\n",
+    "    )\n",
+    "    break\n",
+    "\n",
+    "print(response.json())"
    ]
   }
  ],
