modified standardizing method and added several utilities

--- a/exploration/exploration.ipynb
+++ b/exploration/exploration.ipynb
@@ -3869,7 +3869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -3886,65 +3886,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
     "\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
-    "from train import train"
+    "\n",
+    "from tqdm import tqdm\n",
+    "from pmdarima.arima import auto_arima\n",
+    "from stgcn.utils import MAPE, MSE, MAE\n",
+    "from sklearn.preprocessing import StandardScaler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ta_final = pd.read_csv('./data/web-traffic-time-series-forecasting/data_ta_final.csv')\n",
-    "time_space_matrix = ta_final[[x for x in ta_final.columns if 'Page' not in x]].to_numpy().T\n",
-    "\n",
-    "with open('./data/web-traffic-time-series-forecasting/time_space_matrix.pickle', 'wb') as file:\n",
-    "    pickle.dump(time_space_matrix, file)"
+    "with open('./data/web-traffic-time-series-forecasting/time_space_matrix.pickle', 'rb') as file:\n",
+    "    time_space_matrix = pickle.load(file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_time_space_matrix = time_space_matrix[:-60, :]\n",
+    "val_time_space_matrix = time_space_matrix[-60:, :]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "  0%|          | 0/1000 [00:00<?, ?it/s]\n"
-     ]
-    },
-    {
-     "ename": "RuntimeError",
-     "evalue": "Calculated padded input size per channel: (6 x 497). Kernel size: (22 x 1). Kernel size can't be greater than actual input size",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "\u001b[1;32m/mnt/Bel/Kerjaan/Kuliah/Tugas Akhir/exploration/exploration.ipynb Cell 41'\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/mnt/Bel/Kerjaan/Kuliah/Tugas%20Akhir/exploration/exploration.ipynb#ch0000046?line=0'>1</a>\u001b[0m config_path \u001b[39m=\u001b[39m \u001b[39m'\u001b[39m\u001b[39m./config.json\u001b[39m\u001b[39m'\u001b[39m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/mnt/Bel/Kerjaan/Kuliah/Tugas%20Akhir/exploration/exploration.ipynb#ch0000046?line=1'>2</a>\u001b[0m train(config_path)\n",
-      "File \u001b[0;32m/mnt/Bel/Kerjaan/Kuliah/Tugas Akhir/train.py:86\u001b[0m, in \u001b[0;36mtrain\u001b[0;34m(config_path)\u001b[0m\n\u001b[1;32m     <a href='file:///mnt/Bel/Kerjaan/Kuliah/Tugas%20Akhir/train.py?line=82'>83</a>\u001b[0m features \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39munsqueeze(features, \u001b[39m3\u001b[39m)\u001b[39m.\u001b[39mto(device, dtype\u001b[39m=\u001b[39mtorch\u001b[39m.\u001b[39mfloat)\n\u001b[1;32m     <a href='file:///mnt/Bel/Kerjaan/Kuliah/Tugas%20Akhir/train.py?line=83'>84</a>\u001b[0m target \u001b[39m=\u001b[39m target\u001b[39m.\u001b[39mto(device, dtype\u001b[39m=\u001b[39mtorch\u001b[39m.\u001b[39mfloat)\n\u001b[0;32m---> <a href='file:///mnt/Bel/Kerjaan/Kuliah/Tugas%20Akhir/train.py?line=85'>86</a>\u001b[0m predict \u001b[39m=\u001b[39m model(features)\n\u001b[1;32m     <a href='file:///mnt/Bel/Kerjaan/Kuliah/Tugas%20Akhir/train.py?line=86'>87</a>\u001b[0m train_loss \u001b[39m=\u001b[39m loss_criterion(predict, target)\n\u001b[1;32m     <a href='file:///mnt/Bel/Kerjaan/Kuliah/Tugas%20Akhir/train.py?line=87'>88</a>\u001b[0m total_train_loss \u001b[39m+\u001b[39m\u001b[39m=\u001b[39m mae(predict, target)\u001b[39m.\u001b[39mcpu()\u001b[39m.\u001b[39mitem()\n",
-      "File \u001b[0;32m~/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/module.py:1110\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   <a href='file:///home/mikhaelbelmiro/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/module.py?line=1105'>1106</a>\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   <a href='file:///home/mikhaelbelmiro/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/module.py?line=1106'>1107</a>\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   <a href='file:///home/mikhaelbelmiro/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/module.py?line=1107'>1108</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   <a href='file:///home/mikhaelbelmiro/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/module.py?line=1108'>1109</a>\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> <a href='file:///home/mikhaelbelmiro/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/module.py?line=1109'>1110</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49m\u001b[39minput\u001b[39;49m, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   <a href='file:///home/mikhaelbelmiro/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/module.py?line=1110'>1111</a>\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   <a href='file:///home/mikhaelbelmiro/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/module.py?line=1111'>1112</a>\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
-      "File \u001b[0;32m/mnt/Bel/Kerjaan/Kuliah/Tugas Akhir/stgcn/model.py:108\u001b[0m, in \u001b[0;36mSTGCN.forward\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m    <a href='file:///mnt/Bel/Kerjaan/Kuliah/Tugas%20Akhir/stgcn/model.py?line=105'>106</a>\u001b[0m out1 \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mblock1(X)\n\u001b[1;32m    <a href='file:///mnt/Bel/Kerjaan/Kuliah/Tugas%20Akhir/stgcn/model.py?line=106'>107</a>\u001b[0m out2 \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mblock2(out1)\n\u001b[0;32m--> <a href='file:///mnt/Bel/Kerjaan/Kuliah/Tugas%20Akhir/stgcn/model.py?line=107'>108</a>\u001b[0m out3 \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mlast_temporal(out2)\n\u001b[1;32m    <a href='file:///mnt/Bel/Kerjaan/Kuliah/Tugas%20Akhir/stgcn/model.py?line=108'>109</a>\u001b[0m out \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mfc(torch\u001b[39m.\u001b[39msqueeze(out3))\u001b[39m.\u001b[39mpermute(\u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m, \u001b[39m1\u001b[39m)\n\u001b[1;32m    <a href='file:///mnt/Bel/Kerjaan/Kuliah/Tugas%20Akhir/stgcn/model.py?line=110'>111</a>\u001b[0m \u001b[39mreturn\u001b[39;00m out\n",
-      "File \u001b[0;32m~/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/module.py:1110\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   <a href='file:///home/mikhaelbelmiro/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/module.py?line=1105'>1106</a>\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   <a href='file:///home/mikhaelbelmiro/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/module.py?line=1106'>1107</a>\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   <a href='file:///home/mikhaelbelmiro/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/module.py?line=1107'>1108</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   <a href='file:///home/mikhaelbelmiro/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/module.py?line=1108'>1109</a>\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> <a href='file:///home/mikhaelbelmiro/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/module.py?line=1109'>1110</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49m\u001b[39minput\u001b[39;49m, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   <a href='file:///home/mikhaelbelmiro/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/module.py?line=1110'>1111</a>\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   <a href='file:///home/mikhaelbelmiro/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/module.py?line=1111'>1112</a>\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
-      "File \u001b[0;32m/mnt/Bel/Kerjaan/Kuliah/Tugas Akhir/stgcn/model.py:33\u001b[0m, in \u001b[0;36mTemporalBlock.forward\u001b[0;34m(self, X)\u001b[0m\n\u001b[1;32m     <a href='file:///mnt/Bel/Kerjaan/Kuliah/Tugas%20Akhir/stgcn/model.py?line=27'>28</a>\u001b[0m \u001b[39m'''\u001b[39;00m\n\u001b[1;32m     <a href='file:///mnt/Bel/Kerjaan/Kuliah/Tugas%20Akhir/stgcn/model.py?line=28'>29</a>\u001b[0m \u001b[39m:param X: input data of shape (batch_size, num_timesteps, \u001b[39;00m\n\u001b[1;32m     <a href='file:///mnt/Bel/Kerjaan/Kuliah/Tugas%20Akhir/stgcn/model.py?line=29'>30</a>\u001b[0m \u001b[39mnum_nodes, node_features)\u001b[39;00m\n\u001b[1;32m     <a href='file:///mnt/Bel/Kerjaan/Kuliah/Tugas%20Akhir/stgcn/model.py?line=30'>31</a>\u001b[0m \u001b[39m'''\u001b[39;00m\n\u001b[1;32m     <a href='file:///mnt/Bel/Kerjaan/Kuliah/Tugas%20Akhir/stgcn/model.py?line=31'>32</a>\u001b[0m X \u001b[39m=\u001b[39m X\u001b[39m.\u001b[39mpermute(\u001b[39m0\u001b[39m, \u001b[39m3\u001b[39m, \u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m) \u001b[39m#(batch_size, node_features, num_timesteps, num_nodes)\u001b[39;00m\n\u001b[0;32m---> <a href='file:///mnt/Bel/Kerjaan/Kuliah/Tugas%20Akhir/stgcn/model.py?line=32'>33</a>\u001b[0m temp \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mconv(X)\n\u001b[1;32m     <a href='file:///mnt/Bel/Kerjaan/Kuliah/Tugas%20Akhir/stgcn/model.py?line=33'>34</a>\u001b[0m P \u001b[39m=\u001b[39m temp[:, :\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mout_channels, :, :]\n\u001b[1;32m     <a href='file:///mnt/Bel/Kerjaan/Kuliah/Tugas%20Akhir/stgcn/model.py?line=34'>35</a>\u001b[0m Q \u001b[39m=\u001b[39m temp[:, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mout_channels:, :, :]\n",
-      "File \u001b[0;32m~/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/module.py:1110\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   <a href='file:///home/mikhaelbelmiro/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/module.py?line=1105'>1106</a>\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   <a href='file:///home/mikhaelbelmiro/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/module.py?line=1106'>1107</a>\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   <a href='file:///home/mikhaelbelmiro/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/module.py?line=1107'>1108</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   <a href='file:///home/mikhaelbelmiro/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/module.py?line=1108'>1109</a>\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> <a href='file:///home/mikhaelbelmiro/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/module.py?line=1109'>1110</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49m\u001b[39minput\u001b[39;49m, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   <a href='file:///home/mikhaelbelmiro/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/module.py?line=1110'>1111</a>\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   <a href='file:///home/mikhaelbelmiro/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/module.py?line=1111'>1112</a>\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
-      "File \u001b[0;32m~/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/conv.py:447\u001b[0m, in \u001b[0;36mConv2d.forward\u001b[0;34m(self, input)\u001b[0m\n\u001b[1;32m    <a href='file:///home/mikhaelbelmiro/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/conv.py?line=445'>446</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mforward\u001b[39m(\u001b[39mself\u001b[39m, \u001b[39minput\u001b[39m: Tensor) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m Tensor:\n\u001b[0;32m--> <a href='file:///home/mikhaelbelmiro/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/conv.py?line=446'>447</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_conv_forward(\u001b[39minput\u001b[39;49m, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mweight, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mbias)\n",
-      "File \u001b[0;32m~/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/conv.py:443\u001b[0m, in \u001b[0;36mConv2d._conv_forward\u001b[0;34m(self, input, weight, bias)\u001b[0m\n\u001b[1;32m    <a href='file:///home/mikhaelbelmiro/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/conv.py?line=438'>439</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpadding_mode \u001b[39m!=\u001b[39m \u001b[39m'\u001b[39m\u001b[39mzeros\u001b[39m\u001b[39m'\u001b[39m:\n\u001b[1;32m    <a href='file:///home/mikhaelbelmiro/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/conv.py?line=439'>440</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m F\u001b[39m.\u001b[39mconv2d(F\u001b[39m.\u001b[39mpad(\u001b[39minput\u001b[39m, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_reversed_padding_repeated_twice, mode\u001b[39m=\u001b[39m\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mpadding_mode),\n\u001b[1;32m    <a href='file:///home/mikhaelbelmiro/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/conv.py?line=440'>441</a>\u001b[0m                     weight, bias, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mstride,\n\u001b[1;32m    <a href='file:///home/mikhaelbelmiro/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/conv.py?line=441'>442</a>\u001b[0m                     _pair(\u001b[39m0\u001b[39m), \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdilation, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mgroups)\n\u001b[0;32m--> <a href='file:///home/mikhaelbelmiro/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/conv.py?line=442'>443</a>\u001b[0m \u001b[39mreturn\u001b[39;00m F\u001b[39m.\u001b[39;49mconv2d(\u001b[39minput\u001b[39;49m, weight, bias, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mstride,\n\u001b[1;32m    <a href='file:///home/mikhaelbelmiro/anaconda3/envs/tugas-akhir/lib/python3.9/site-packages/torch/nn/modules/conv.py?line=443'>444</a>\u001b[0m                 \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mpadding, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdilation, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mgroups)\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: Calculated padded input size per channel: (6 x 497). Kernel size: (22 x 1). Kernel size can't be greater than actual input size"
+      "doing 117:  23%|██▎       | 116/497 [34:44<2:24:33, 22.77s/it]"
      ]
     }
    ],
    "source": [
-    "config_path = './config.json'\n",
-    "train(config_path)"
+    "save_dir = './model/sarima'\n",
+    "results_path = f'{save_dir}/training_results.csv'\n",
+    "os.makedirs(save_dir, exist_ok=True)\n",
+    "\n",
+    "\n",
+    "if os.path.exists(results_path):\n",
+    "    training_stats = pd.read_csv(results_path).to_dict(orient='list')\n",
+    "else:\n",
+    "    training_stats = {\n",
+    "    'mape': [],\n",
+    "    'mae': [],\n",
+    "    'mse': []\n",
+    "}\n",
+    "\n",
+    "with tqdm(total=train_time_space_matrix.shape[1]) as pbar:\n",
+    "    for i in range(train_time_space_matrix.shape[1]):\n",
+    "        pbar.set_description(f'doing {i+1}')\n",
+    "\n",
+    "        if i < len(training_stats['mape']):\n",
+    "            pbar.update(1)\n",
+    "            continue\n",
+    "        \n",
+    "        scaler = StandardScaler()\n",
+    "        train_data = scaler.fit_transform(train_time_space_matrix[:, i].reshape(-1, 1))\n",
+    "        val_data = val_time_space_matrix[:, i].reshape(-1, 1)\n",
+    "\n",
+    "        model = auto_arima(train_data)\n",
+    "        pred = scaler.inverse_transform(model.predict(60).reshape(-1, 1))\n",
+    "        \n",
+    "        training_stats['mape'].append(MAPE(val_data, pred))\n",
+    "        training_stats['mae'].append(MAE(val_data, pred))\n",
+    "        training_stats['mse'].append(MSE(val_data, pred))\n",
+    "\n",
+    "        pbar.update(1)\n",
+    "        pd.DataFrame(training_stats).to_csv(f'{save_dir}/training_results.csv', index=False)"
    ]
   },
   {
